--- a/src/componets/page/Home/index.css
+++ b/src/componets/page/Home/index.css
@@ -1,15 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
+ 
+.background{
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}  
 
 .main{
-    display: flex; 
+    display: flex;  
     flex-direction: column;
-    max-width: 1440px;
-    height: 100%;
+    width: 1440px;
 }
 
 .title{
-    padding-top: 19.9px;
     font-size: 40px;
     justify-content: center;
     display: flex;
@@ -29,7 +34,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-}
+} 
 
 .image{
     align-items: center;
@@ -74,13 +79,12 @@ a{
 
 
 .navbar{
-
     display: flex;
     justify-content: space-around;
     align-items: center;
     justify-content: space-between;
-    width: 100vw;
-    padding: 0 40px;
+    width: 100%;
+     padding: 0 40px; 
     height: 80px;
 }
 
@@ -113,7 +117,12 @@ a{
  
 }
 
-@media (max-width: 293px){
+@media (max-width: 295px){
+    
+    .main{
+        width: 100%;
+    }
+    
     .logo{
         width: 140px;
     }
@@ -122,6 +131,10 @@ a{
     }
     .title{
         font-size: 3px;
+    }
+
+    .input-search{
+        width: 150px;
     }
    
 }
